--- a/_config.yml
+++ b/_config.yml
@@ -44,14 +44,12 @@ resume_section_associations:    true
 # Resume social links
 # uncomment the options you wish to display, and add your own URL
 resume_social_links:
-  resume_github_url:            "https://github.com/mahisid"
-  # resume_twitter_url:           "http://twitter.com/jglovier"
-  # resume_dribbble_url:          "https://dribbble.com/jag"
+  resume_github_url:            "https://github.com/mahisiddareddy"
+  # resume_twitter_url:           "insert twitter URL here"
   # resume_facebook_url:          "insert Facebook URL here"
   resume_linkedin_url:          "https://www.linkedin.com/in/mahisiddareddy"
   # resume_instagram_url:         "insert your Instagram URL here"
-  # resume_website_url:           "http://joelglovier.com"
-  # resume_medium_url:            "https://medium.com/@jglovier"
+  # resume_website_url:           "http://mahisiddareddy.github.io"
 resume_print_social_links:      true
 
 # Design settings
