--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ resume_contact_address:         "Austin, Texas"
 resume_header_contact_info:     "Austin, Texas • 925-366-0642 • mahikiranreddy.adm@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>Experienced cloud/devops engineer with background in systems and network engineering. Well-versed in AWS cloud platform and infrastructre as code tools like Terraform and Cloudformation. Innovative thinker and passionate about building new tools to drive efficiency and solve complex problems for the Organization.</p>"
+resume_header_intro: "<p>Highly skilled cloud engineer with 5+ years of industry experience. Proficient in building cutting-edge cloud-native infrastructure, optimizing systems for performance, and implementing security best practices in the cloud. Exceptional problem-solving abilities and a track record of delivering successful infrastructure automation projects.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
